--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/frxnz/ozymandias",
   "dependencies": {
     "johnny-five": "^0.8.91",
+    "socket.io-client": "^1.3.6"
   },
   "devDependencies": {
     "beepbeep": "^1.2.0",
