--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "homepage": "https://github.com/frxnz/ozymandias",
   "dependencies": {
+    "dotenv": "^1.2.0",
     "johnny-five": "^0.8.91",
+    "particle-io": "^0.8.1",
     "socket.io-client": "^1.3.6"
   },
   "devDependencies": {
