--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^1.2.0",
     "johnny-five": "^0.8.91",
     "particle-io": "^0.8.1",
-    "socket.io-client": "^1.3.6"
+    "socket.io-client": "^1.3.6",
+    "twilio": "^2.3.0"
   },
   "devDependencies": {
     "beepbeep": "^1.2.0",
